IVYPORTAL-8985: Needed features for release 8.0 III - Fixed minor alignment problems
Former-commit-id: cad228b82dd762b5c13a16a75eab4b04fb812074

--- a/AxonIvyPortal/PortalStyle/webContent/resources/serenity-portal/theme.scss
+++ b/AxonIvyPortal/PortalStyle/webContent/resources/serenity-portal/theme.scss
@@ -1224,8 +1224,8 @@ a.compact-task-start-link .task-start-list-item:hover, .task-start-list-item.ful
   font-size: $smallFontSize;
 }
 
-.ui-widget-content a {
-  color: $contentLinkChangeAwesomeIconColor
+.ui-widget-content a.icon-selection-dialog-selecting-icon {
+  color: $contentLinkChangeAwesomeIconColor;
 }
 
 .chart-filter-info-icon {
